# MyFFmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/itzheng/myffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/itzheng/myffmpeg/: CopyFileUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/org/itzheng/myffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib-ffmpeg/: build.gradle
lib-ffmpeg/src/androidTest/java/org/itzheng/ffmpeg/: ExampleInstrumentedTest.java
lib-ffmpeg/src/main/: AndroidManifest.xml
lib-ffmpeg/src/main/cpp/: CMakeLists.txt  alog.cpp  native-lib.cpp
lib-ffmpeg/src/main/java/org/itzheng/ffmpeg/: FFmpegInfo.java
lib-ffmpeg/src/test/java/org/itzheng/ffmpeg/: ExampleUnitTest.java
